log
Thu 07 Sep 2023 12:17:47 AM UTC: 
 tests:  0|6
total_score: 0/70
78dbf54
Thu 07 Sep 2023 12:23:56 AM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:30: error: too few arguments to function ‘calloc’
   56 |   HashMap* map = (HashMap *) calloc(sizeof(HashMap));
      |                              ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
In file included from test.c:4:
hashmap.c:58:6: error: expected expression before ‘HashMap’
   58 |   if(HashMap == NULL) return NULL;
      |      ^~~~~~~
Compilation failed
5bb7b37
Thu 07 Sep 2023 12:24:10 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:6: error: expected expression before ‘HashMap’
   58 |   if(HashMap == NULL) return NULL;
      |      ^~~~~~~
Compilation failed
0040f86
Thu 07 Sep 2023 12:24:25 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7e00acd
Thu 07 Sep 2023 12:32:01 AM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:71:3: error: expected expression before ‘}’ token
   71 |   }
      |   ^
Compilation failed
456ac1f
Thu 07 Sep 2023 12:32:24 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
05a1e65
Thu 07 Sep 2023 01:36:08 AM UTC: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:28: error: passing argument 1 of ‘hash’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   47 |         long index = (hash(map, key) + i) % map -> capacity;
      |                            ^~~
      |                            |
      |                            HashMap * {aka struct HashMap *}
hashmap.c:26:19: note: expected ‘char *’ but argument is of type ‘HashMap *’ {aka ‘struct HashMap *’}
   26 | long hash( char * key, long capacity) {
      |            ~~~~~~~^~~
hashmap.c:47:33: error: passing argument 2 of ‘hash’ makes integer from pointer without a cast [-Werror=int-conversion]
   47 |         long index = (hash(map, key) + i) % map -> capacity;
      |                                 ^~~
      |                                 |
      |                                 char *
hashmap.c:26:29: note: expected ‘long int’ but argument is of type ‘char *’
   26 | long hash( char * key, long capacity) {
      |                        ~~~~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8840858
Thu 07 Sep 2023 01:40:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:28: error: incompatible type for argument 1 of ‘hash’
   46 |         long index = (hash(*map, *key) + i) % map -> capacity;
      |                            ^~~~
      |                            |
      |                            HashMap {aka struct HashMap}
hashmap.c:26:19: note: expected ‘char *’ but argument is of type ‘HashMap’ {aka ‘struct HashMap’}
   26 | long hash( char * key, long capacity) {
      |            ~~~~~~~^~~
Compilation failed
e0ecb73
Thu 07 Sep 2023 01:49:21 AM UTC: 
 hashmap.c | 26 +++++++++++++-------------
 1 file changed, 13 insertions(+), 13 deletions(-)
 tests:  5|4
total_score: 30/70
af15926
